[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reconciliation-platform"
version = "1.0.0"
description = "Payments Reconciliation Gap Detection Platform"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.2.1",
    "pydantic-core==2.18.4",
    "sqlalchemy==2.0.30",
    "aiosqlite==0.20.0",
    "sqlalchemy-utils==0.41.2",
    "alembic==1.13.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.3",
    "cryptography==42.0.8",
    "python-multipart==0.0.9",
    "aiofiles==23.2.1",
    "httpx==0.27.0",
    "jinja2==3.1.4",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "structlog==24.1.0",
    "celery==5.4.0",
    "mangum==0.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "data_generator*"]

[tool.uv]
python-version = "3.12"

[tool.uv.pip]
only-binary = [":all:"]
